[project]
name = "rag-python-app"
version = "0.1.0"
description = "Production-style RAG pipeline using Gemini and Qdrant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "google-generativeai>=0.8.6",
    "langchain-google-genai>=2.0.0",
    "llama-index-core>=0.14.13",
    "llama-index-readers-file>=0.5.6",
    "qdrant-client>=1.16.2",
    "inngest>=0.4.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "langchain-huggingface==1.2.0",
    "sentence-transformers==2.7.0",
    "transformers==4.41.2",
    "huggingface-hub<1.0.0",
]
